# cyton_gamma_1500_description

./: README  README.md  cyton_gamma_1500.urdf  cyton_gamma_1500_macros.urdf.xacro  package.xml
meshes/: base.dae  elbow_pitch.dae  elbow_yaw.dae  gripper_finger1.dae  gripper_finger2.dae  shoulder_pitch.dae  shoulder_roll.dae  shoulder_yaw.dae  wrist_pitch.dae  wrist_roll.dae
