<?xml version="1.0"?>
<package>
  <name>cyton_gamma_1500_description</name>
  <version>0.0.1</version>
  <description>URDF description for the Robai Cyton Gamma 1500 robot manipulator</description>

  <author email="gert@cs.ttu.ee">Gert Kanter</author>
  <maintainer email="gert@cs.ttu.ee">Gert Kanter</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/cyton_gamma_1500_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>


  <export>
  </export>
</package>
